[package]
name = "rebornProject"
version = "0.1.0"
edition = "2021"

[dependencies]
minhook = "0.3.0"
serde_json = "1.0.108"
toy-arms = {git = "https://github.com/pseuxide/toy-arms"}
wchar = "0.11.0"
sha256 = "1.5.0"
dll-syringe = "0.15.2"

[dependencies.serde]
version = "1.0.192"
features = ["serde_derive"]